platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_44.platter
piece of x = 5;

start(){
    piece of x = topiece(rand() * 3) + 1;
    chars of s = copy("CompilerDesign", 0, 8);
    serve x * size(s);
}